--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,5 +1,4 @@
 security:
-
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         users_in_memory: { memory: null }
@@ -8,7 +7,7 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: lazy
+            lazy: true
             provider: users_in_memory
 
             # activate different ways to authenticate
@@ -16,6 +15,11 @@ security:
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
+            custom_authenticators:
+                - App\Security\LoginFormAuthenticator
+
+    enable_authenticator_manager: true
+
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
